[gd_scene load_steps=2 format=3 uid="uid://goesdf0fjl26"]

[ext_resource type="Script" uid="uid://bxlcr1rxdpaxi" path="res://modules/base_hud/base_hud.gd" id="1_u8nab"]

[node name="BaseHudControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_u8nab")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PollenLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 Pollen"

[node name="HoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 Honey"

[node name="EmptyControl" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HoneyFactoryPollenLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0 Honey Factory Pollen"

[node name="HoneyFactoryProductionProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OpenUpgradesButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
layout_mode = 2
text = "Upgrades"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
layout_mode = 2
disabled = true
text = "TBD"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
layout_mode = 2
disabled = true
text = "TBD"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
layout_mode = 2
disabled = true
text = "TBD"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QueenLayProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreateEggButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "CREATE EGG"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer5/HBoxContainer/OpenUpgradesButton" to="." method="_on_open_upgrades_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/CreateEggButton" to="." method="_on_create_egg_button_pressed"]
